wiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: wiki
  name: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wiki
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: wiki
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: db
        - name: DB_NAME
          value: wiki
        - name: DB_PASS
          value: wikijsrocks
        - name: DB_PORT
          value: "5432"
        - name: DB_TYPE
          value: postgres
        - name: DB_USER
          value: wikijs
        image: requarks/wiki:2
        imagePullPolicy: ""
        name: wiki
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
