wiki-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: wiki
            servicePort: 3000
